[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Allagash"
version = "0.4.3"
authors = [
  { name="Aaron Pulver", email="apulverizer@gmail.com" },
]
description = "A Python Spatial Optimization Library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
license = { text = "MIT"}
dependencies = [
    "pandas>=0.23.0",
    "pulp>=1.6.1"
]

[project.optional-dependencies]
geopandas = [
    "geopandas>=0.4.1",
]
arcgis = [
    "arcgis>=1.8.2"
]

[project.urls]
"Homepage" = "https://apulverizer.github.io/allagash"
"Bug Tracker" = "https://github.com/apulverizer/allagash/issues"